--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,24 @@
-.profile {
+body {
+  text-align: center;
+  background-color: rgb(241, 237, 237);
+}
+
+.profile,
+.statistics,
+.transaction-history {
+  margin-left: auto;
+  margin-right: auto;
+
+  width: 350px;
+  text-align: center;
+
+  background-color: rgb(255, 255, 255);
+  border: solid 1px rgb(219, 219, 219);
+  border-radius: 4px;
+  box-shadow: 1px 1px 1px 1px rgb(219, 219, 219);
+}
+
+.title {
   text-align: center;
 }
 
@@ -12,21 +32,38 @@
   color: grey;
 }
 
-.stats {
+.stats,
+.stat-list {
   display: flex;
   justify-content: center;
   list-style: none;
+  margin-bottom: 0;
   padding: 0;
+
+  background-color: rgb(241, 237, 237);
 }
 
 .stats li {
-  margin-right: 10px;
-  margin-left: 10px;
+  padding: 20px;
+}
+
+.item {
+  margin-right: 15px;
+  margin-left: 15px;
+  padding-top: 15px;
+  padding-bottom: 15px;
+}
+
+.avatar {
+  padding: 20px;
+  width: 150px;
+  border-radius: 50%;
 }
 
 .label {
   display: block;
   margin-bottom: 5px;
+
   font-size: 14px;
   color: grey;
 }
@@ -34,4 +71,46 @@
 .quantity {
   font-size: 16px;
   font-weight: 700;
+}
+
+.friend-list {
+  list-style: none;
+  padding: 0;
+}
+
+.friend-list .item {
+  display: flex;
+  align-items: center;
+
+  margin-bottom: 10px;
+
+  border: solid 1px rgb(219, 219, 219);
+  box-shadow: 1px 1px 1px rgb(219, 219, 219);
+}
+
+.status-green::before,
+.status-red::before {
+  content: "";
+  display: block;
+
+  margin-left: 20px;
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+}
+
+.status-green::before {
+  background-color: rgb(51, 204, 71);
+}
+
+.status-red::before {
+  background-color: rgb(212, 45, 40);
+}
+
+.avatar {
+  width: 80px;
+}
+
+.transaction-history td {
+  padding: 10px;
 }
