--- a/src/App.css
+++ b/src/App.css
@@ -131,3 +131,12 @@ body {
 .transaction-history td {
   padding: 10px;
 }
+
+.thead {
+  padding-top: 10px;
+  padding-bottom: 10px;
+}
+
+table thead {
+  border-bottom: 1px solid rgb(37, 37, 37);
+}
